--- a/index.html
+++ b/index.html
@@ -2,25 +2,49 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Depósito de Reparaciones</title>
 </head>
 <body>
-  <h1>Agregar Reparación</h1>
-  <form id="repairForm">
-    <label for="device">Dispositivo:</label>
-    <input type="text" id="device" name="device" required /><br /><br />
+  <h1>Depósito de Reparaciones - CRUD</h1>
 
-    <label for="issue">Problema:</label>
-    <input type="text" id="issue" name="issue" required /><br /><br />
+  <!-- Formulario AGREGAR -->
+  <h2>Agregar Reparación</h2>
+  <form id="form-agregar">
+    <input type="number" id="id reparación" placeholder="id reparación" required />
+    <input type="text" id="cliente" placeholder="Nombre del Cliente" required />
+    <input type="text" id="equipo a reparar" placeholder="Equipo" required />
+    <textarea id="falla" placeholder="Descripción de la Falla" required></textarea>
+    <input type="date" id="fechaIngreso" required />
+    <button type="submit">Agregar</button>
+  </form>
 
-    <label for="client">Cliente:</label>
-    <input type="text" id="client" name="client" required /><br /><br />
+  <!-- Formulario CONSULTAR -->
+  <h2>Consultar Reparación</h2>
+  <form id="form-consultar">
+    <input type="text" id="consulta-id" placeholder="ID de reparación" required />
+    <button type="submit">Consultar</button>
+  </form>
+  <pre id="resultado-consulta"></pre>
 
-    <label for="date">Fecha de ingreso:</label>
-    <input type="date" id="date" name="date" required /><br /><br />
+  <!-- Formulario ACTUALIZAR -->
+  <h2>Actualizar Reparación</h2>
+  <form id="form-actualizar">
+    <input type="text" id="actualizar-id" placeholder="ID de reparación" required />
+    <input type="text" id="nuevo-cliente" placeholder="Nuevo Cliente" />
+    <input type="text" id="nuevo-equipo" placeholder="Nuevo Equipo" />
+    <input type="text" id="nueva-marca" placeholder="Nueva Marca" />
+    <input type="text" id="nuevo-modelo" placeholder="Nuevo Modelo" />
+    <textarea id="nueva-falla" placeholder="Nueva Falla"></textarea>
+    <input type="date" id="nueva-fecha" />
+    <button type="submit">Actualizar</button>
+  </form>
 
-    <button type="submit">Agregar Reparación</button>
+  <!-- Formulario ELIMINAR -->
+  <h2>Eliminar Reparación</h2>
+  <form id="form-eliminar">
+    <input type="text" id="eliminar-id" placeholder="ID de reparación" required />
+    <button type="submit">Eliminar</button>
   </form>
 
   <script src="frontend/script.js"></script>
