--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <button type="submit">Eliminar</button>
   </form>
 
-  <script src="frontend/script.js"></script>
+  <section id="data-container">
+    <h2>Datos Registrados</h2>
+    <div id="resultados"></div>
+  </section>
 </body>
 </html>
