--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
     <input type="text" id="eliminar-id" placeholder="ID de reparación" required />
     <button type="submit">Eliminar</button>
   </form>
+  
+<!-- Resultado -->
+<section id="data-container">
+  <h2>Datos Registrados</h2>
+  <button id="btn-actualizar-manual">Actualizar lista</button>
+  <div id="resultados"></div>
+</section>
 
-  <section id="data-container">
-    <h2>Datos Registrados</h2>
-    <div id="resultados"></div>
-  </section>
-</body>
-</html>
