--- a/index.html
+++ b/index.html
@@ -54,3 +54,12 @@
   <div id="resultados"></div>
 </section>
 
+<!-- Resultado -->
+<section id="data-container">
+  <h2>Datos Registrados</h2>
+  <button id="btn-actualizar-manual">Actualizar lista</button>
+  <div id="mensajes"></div>
+  <div id="resultados"></div>
+</section>
+
+
