--- a/index.html
+++ b/index.html
@@ -46,20 +46,13 @@
     <input type="text" id="eliminar-id" placeholder="ID de reparación" required />
     <button type="submit">Eliminar</button>
   </form>
-  
-<!-- Resultado -->
-<section id="data-container">
-  <h2>Datos Registrados</h2>
-  <button id="btn-actualizar-manual">Actualizar lista</button>
-  <div id="resultados"></div>
-</section>
+  <section id="data-container">
+    <h2>Datos Registrados</h2>
+    <button id="btn-actualizar-manual">Actualizar Lista</button>
+    <div id="mensajes"></div>
+    <div id="resultados"></div>
+  </section>
 
-<!-- Resultado -->
-<section id="data-container">
-  <h2>Datos Registrados</h2>
-  <button id="btn-actualizar-manual">Actualizar lista</button>
-  <div id="mensajes"></div>
-  <div id="resultados"></div>
-</section>
-
-
+  <script src="./frontend/script.js"></script>
+</body>
+</html>
