--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <h2>Agregar Reparación</h2>
   <form id="addForm">
+    <input type="number" id="ID" placeholder="ID" required>
     <input type="text" id="cliente" placeholder="Cliente" required>
     <input type="text" id="equipo" placeholder="Equipo" required>
     <input type="text" id="falla" placeholder="Descripción de la Falla" required>
