--- a/index.html
+++ b/index.html
@@ -35,5 +35,11 @@
     <button type="submit">Eliminar</button>
   </form>
   <script src="frontend/script.js"></script>
+
+  <h2>Listar Depósito de Reparaciones</h2>
+  <form id="formListar">
+    <p id="rta">Resultado:</p>
+    <input type="submit" value="Listar" onclick="listar(event)">
+  </form>
 </body>
 </html>
