--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <script type="text/javascript" src="./frontend/script.js"></script>
   <title>Depósito de Reparaciones</title>
 </head>
 <body>
