--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- Formulario Agregar -->
   <h2>Agregar Reparación</h2>
   <form id="form-agregar">
+    <input type="number" name="id" placeholder="id" required />
     <input type="text" name="cliente" placeholder="Nombre del Cliente" required />
     <input type="text" name="equipo" placeholder="Equipo" required />
     <input type="text" name="problema" placeholder="Problema" required />
