--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
   </form>
   <ul id="lista-reparaciones"></ul>
 
+  <!-- Apartado de Datos Registrados -->
+  <h2>Reparaciones Registradas</h2>
+  <div id="reparaciones-registradas"></div>
+  <button id="btn-actualizar-listado">Actualizar Listado</button>
+
   <!-- Script al final del body -->
   <script type="module" src="frontend/script.js"></script>
 </body>
